[gd_scene load_steps=17 format=3 uid="uid://chuytojhypqte"]

[ext_resource type="Script" path="res://addons/goolash/ui/hud.gd" id="1_72a5i"]
[ext_resource type="PackedScene" uid="uid://dbnwg2psnoj0f" path="res://addons/goolash/ui/button_used_color.tscn" id="2_5di5i"]
[ext_resource type="Texture2D" uid="uid://jnmhbl8m5hy2" path="res://addons/goolash/icons/ToolSelect.svg" id="2_7pmde"]
[ext_resource type="Texture2D" uid="uid://da1imqfk7aeg5" path="res://addons/goolash/icons/Paint.svg" id="3_eks0u"]
[ext_resource type="Texture2D" uid="uid://dpumbmfv451m4" path="res://addons/goolash/icons/ToolShape.svg" id="4_lemf8"]
[ext_resource type="Texture2D" uid="uid://bi6b3ska6mcpo" path="res://addons/goolash/icons/ToolOval.svg" id="4_osrit"]
[ext_resource type="Texture2D" uid="uid://bfv15hq42cpvg" path="res://addons/goolash/icons/ToolRectangle.svg" id="5_3fhbx"]
[ext_resource type="Texture2D" uid="uid://cf60f07corl3p" path="res://addons/goolash/icons/ColorPick.svg" id="5_8y7ry"]
[ext_resource type="Texture2D" uid="uid://bduj3a2iwrk0c" path="res://addons/goolash/icons/Bucket.svg" id="6_83ojh"]
[ext_resource type="Texture2D" uid="uid://d12ynu7xxfgoe" path="res://addons/goolash/icons/Eraser.svg" id="9_rm6rn"]
[ext_resource type="Texture2D" uid="uid://bf5ibats8rlf4" path="res://addons/goolash/icons/paint_mode_front.svg" id="9_t0ong"]
[ext_resource type="Texture2D" uid="uid://2sqtdt3603qw" path="res://addons/goolash/icons/paint_mode_behind.svg" id="10_3a2id"]
[ext_resource type="Texture2D" uid="uid://bfa3nkxo2umg7" path="res://addons/goolash/icons/paint_mode_inside.svg" id="11_dayuh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_774xs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d636o"]
bg_color = Color(0.286275, 0.286275, 0.286275, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkkh3"]

[node name="Toolbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_72a5i")

[node name="Colors" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.823529)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -171.0
offset_top = 25.0
offset_right = -21.0
offset_bottom = 376.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Colors/MarginContainer"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="Colors/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin = 0
theme_override_constants/sv_width = 0
theme_override_constants/sv_height = 130
theme_override_constants/h_width = 18
color = Color(0.247059, 0.14902, 0.0901961, 1)
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
presets_visible = false

[node name="DefaultColors" type="HFlowContainer" parent="Colors/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

[node name="Pink" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.988235, 0.478431, 0.576471, 1)
layout_mode = 2
tooltip_text = "Pink"
is_default = true

[node name="Caramel" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.988235, 0.592157, 0.207843, 1)
layout_mode = 2
tooltip_text = "Caramel"
is_default = true

[node name="Yellow" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(1, 0.85098, 0, 1)
layout_mode = 2
tooltip_text = "Yellow"
is_default = true

[node name="Lime" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.909804, 1, 0, 1)
layout_mode = 2
tooltip_text = "Lime"
is_default = true

[node name="Mint" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.658824, 0.901961, 0.811765, 1)
layout_mode = 2
tooltip_text = "Mint"
is_default = true

[node name="Sky" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.431373, 0.776471, 1, 1)
layout_mode = 2
tooltip_text = "Sky"
is_default = true

[node name="Magenta" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.886275, 0.0627451, 0.466667, 1)
layout_mode = 2
tooltip_text = "Magenta"
is_default = true

[node name="Red" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(1, 0.0980392, 0.168627, 1)
layout_mode = 2
tooltip_text = "Red"
is_default = true

[node name="Orange" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(1, 0.372549, 0, 1)
layout_mode = 2
tooltip_text = "Orange"
is_default = true

[node name="Green" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.45098, 0.631373, 0.0627451, 1)
layout_mode = 2
tooltip_text = "Green"
is_default = true

[node name="Cyan" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.160784, 0.568627, 0.462745, 1)
layout_mode = 2
tooltip_text = "Cyan"
is_default = true

[node name="Blue" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.219608, 0.486275, 0.835294, 1)
layout_mode = 2
tooltip_text = "Blue"
is_default = true

[node name="Purple" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.435294, 0.117647, 0.470588, 1)
layout_mode = 2
tooltip_text = "Purple"
is_default = true

[node name="Chestnut" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.470588, 0.0509804, 0.164706, 1)
layout_mode = 2
tooltip_text = "Chestnut"
is_default = true

[node name="Goulash" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.247059, 0.14902, 0.0901961, 1)
layout_mode = 2
tooltip_text = "Goulash"
is_default = true

[node name="Olive" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.223529, 0.290196, 0.156863, 1)
layout_mode = 2
tooltip_text = "Olive"
is_default = true

[node name="Teal" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.160784, 0.392157, 0.345098, 1)
layout_mode = 2
tooltip_text = "Teal"
is_default = true

[node name="Space" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.180392, 0.223529, 0.494118, 1)
layout_mode = 2
tooltip_text = "Space"
is_default = true

[node name="Black" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 2
tooltip_text = "Black"
is_default = true

[node name="Charcoal" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.0941176, 0.0980392, 0.137255, 1)
layout_mode = 2
tooltip_text = "Charcoal"
is_default = true

[node name="Graphite" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.2, 0.192157, 0.219608, 1)
layout_mode = 2
tooltip_text = "Graphite"
is_default = true

[node name="Gray" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.431373, 0.423529, 0.411765, 1)
layout_mode = 2
tooltip_text = "Gray"
is_default = true

[node name="Cream" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
self_modulate = Color(0.756863, 0.701961, 0.67451, 1)
layout_mode = 2
tooltip_text = "Cream"
is_default = true

[node name="White" parent="Colors/MarginContainer/VBoxContainer/DefaultColors" instance=ExtResource("2_5di5i")]
layout_mode = 2
tooltip_text = "White"
is_default = true

[node name="HSeparator" type="HSeparator" parent="Colors/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UsedColors" type="HFlowContainer" parent="Colors/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Tools" type="Panel" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.9)
layout_mode = 1
offset_left = 7.0
offset_top = 32.0
offset_right = 52.0
offset_bottom = 442.0
scale = Vector2(1.00068, 1)

[node name="MarginContainer" type="MarginContainer" parent="Tools"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Tools/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Tools" type="VBoxContainer" parent="Tools/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ButtonSelect" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Select (Q)"
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("2_7pmde")
flat = true
icon_alignment = 1

[node name="ButtonPaint" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Paint brush (B)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("3_eks0u")
flat = true
icon_alignment = 1

[node name="ButtonOval" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Oval brush (O)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("4_osrit")
flat = true
icon_alignment = 1

[node name="ButtonRect" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Rectangle Brush (M)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("5_3fhbx")
flat = true
icon_alignment = 1

[node name="ButtonShape" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Shape Brush (Y)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("4_lemf8")
flat = true
icon_alignment = 1

[node name="ButtonEyedropper" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Eyedropper (I)
"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("5_8y7ry")
flat = true
icon_alignment = 1

[node name="ButtonFill" type="Button" parent="Tools/MarginContainer/VBoxContainer/Tools"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Fill Bucket (G)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("6_83ojh")
flat = true
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Tools/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonEraseMode" type="Button" parent="Tools/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Fill Bucket (G)"
theme_override_styles/disabled = SubResource("StyleBoxFlat_d636o")
theme_override_styles/focus = SubResource("StyleBoxEmpty_774xs")
toggle_mode = true
icon = ExtResource("9_rm6rn")
flat = true
icon_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Tools/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PropertiesSelect" type="VBoxContainer" parent="Tools/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="Tools/MarginContainer/VBoxContainer/PropertiesSelect"]
layout_mode = 2

[node name="Fall" type="PopupMenu" parent="Tools/MarginContainer/VBoxContainer/PropertiesSelect/MenuBar"]
item_count = 2
item_0/text = "Smooth"
item_0/id = 0
item_1/text = "Linear"
item_1/id = 1

[node name="PropertiesPaint" type="VBoxContainer" parent="Tools/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint"]
layout_mode = 2
text = "Size"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.1484
offset_top = -11.5
offset_right = 22.1484
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/minimum_character_width = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_qkkh3")
text = "10"
alignment = 1
max_length = 3

[node name="Control" type="Control" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="ButtonPaintMode" type="Button" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("9_t0ong")
icon_alignment = 1

[node name="MenuPaintMode" type="Panel" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -16.0
offset_right = 95.0
offset_bottom = 78.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode"]
layout_mode = 2
offset_right = 99.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ButtonPainModeFront" type="Button" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer"]
layout_mode = 2
text = "Front"
icon = ExtResource("9_t0ong")
flat = true
alignment = 0

[node name="ButtonPainModeBehind" type="Button" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer"]
layout_mode = 2
text = "Behind"
icon = ExtResource("10_3a2id")
flat = true
alignment = 0

[node name="ButtonPainModeInside" type="Button" parent="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer"]
layout_mode = 2
text = "Inside"
icon = ExtResource("11_dayuh")
flat = true
alignment = 0

[node name="PropertiesFill" type="VBoxContainer" parent="Tools/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Tools/MarginContainer/VBoxContainer/PropertiesFill"]
layout_mode = 2
text = "Size"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Colors" to="." method="_on_colors_mouse_entered"]
[connection signal="mouse_exited" from="Colors" to="." method="_on_colors_mouse_exited"]
[connection signal="color_changed" from="Colors/MarginContainer/VBoxContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonSelect" to="." method="_on_button_select_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonPaint" to="." method="_on_button_paint_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonOval" to="." method="_on_button_oval_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonRect" to="." method="_on_button_rect_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonShape" to="." method="_on_button_pen_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonEyedropper" to="." method="_on_button_eyedropper_pressed"]
[connection signal="pressed" from="Tools/MarginContainer/VBoxContainer/Tools/ButtonFill" to="." method="_on_button_fill_pressed"]
[connection signal="toggled" from="Tools/MarginContainer/VBoxContainer/ButtonEraseMode" to="." method="_on_button_erase_mode_toggled"]
[connection signal="button_down" from="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/ButtonPaintMode" to="." method="_on_button_paint_mode_button_down"]
[connection signal="button_up" from="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer/ButtonPainModeFront" to="." method="_on_button_pain_mode_front_button_up"]
[connection signal="button_up" from="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer/ButtonPainModeBehind" to="." method="_on_button_pain_mode_behind_button_up"]
[connection signal="button_up" from="Tools/MarginContainer/VBoxContainer/PropertiesPaint/Control/MenuPaintMode/VBoxContainer/ButtonPainModeInside" to="." method="_on_button_pain_mode_inside_button_up"]
